# ChangeLog for dev-ruby/ruby-ldap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.60 2013/09/06 05:42:20 graaff Exp $

*ruby-ldap-0.9.15 (06 Sep 2013)

  06 Sep 2013; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.15.ebuild:
  Version bump.

*ruby-ldap-0.9.13 (06 Jun 2013)

  06 Jun 2013; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.13.ebuild:
  Version bump.

  06 Jun 2013; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.9-r1.ebuild:
  Cleanup.

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> ruby-ldap-0.9.12.ebuild:
  Stable for HPPA (bug #422841).

  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-ldap-0.9.12.ebuild:
  alpha/ia64/sparc stable wrt #422481

  22 Jul 2012; <nixnut@gentoo.org> ruby-ldap-0.9.12.ebuild:
  ppc stable #422841

  26 Jun 2012; Jeff Horelick <jdhore@gentoo.org> ruby-ldap-0.9.12.ebuild:
  marked x86 per bug 422841

  21 Jun 2012; Agostino Sarubbo <ago@gentoo.org> ruby-ldap-0.9.12.ebuild:
  Stable for amd64, wrt bug #422841

*ruby-ldap-0.9.12 (14 Mar 2012)

  14 Mar 2012; MATSUU Takuto <matsuu@gentoo.org> +ruby-ldap-0.9.12.ebuild:
  Version bumped. Fixed HOMEPAGE. Clean up.

  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.9.ebuild:
  Remove old version.

  09 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ruby-ldap-0.9.9-r1.ebuild:
  ppc stable wrt #380527

  03 Sep 2011; Raúl Porcel <armin76@gentoo.org> ruby-ldap-0.9.9-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #380527

  31 Aug 2011; Tony Vroon <chainsaw@gentoo.org> ruby-ldap-0.9.9-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella" Delaney & Elijah
  "Armageddon" El Lazkani in bug #380527 filed by Takuto Matsuu.

  10 Jan 2011; Hans de Graaff <graaff@gentoo.org> ruby-ldap-0.9.9-r1.ebuild:
  Keyword ~x86-macos.

  20 Sep 2010; Guy Martin <gmsoft@gentoo.org> ruby-ldap-0.9.9-r1.ebuild:
  hppa stable.
